@@ -1,4 +1,4 @@
-$Id: History,v 1.165 2001-11-14 14:18:27 johna Exp $
+$Id: History,v 1.166 2001-11-14 14:56:31 barrand Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,10 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+14th November 2001  Guy Barrand
+- OpenInventor : move HEPVis/SoWindow under vis/OpenInventor/G4SoWindow
+  to prepare HEPVis/6.0. (HEPVis/SoWindow will disappear from HEPVis/6.0).
 
 14th November 2001  John Allison
 - Added README.built_in_commands.
